Closed Bug 577344 Opened 13 years ago Closed 13 years ago

warning C4743: 'const mozilla::layers::ImageLayer::`vftable'' has different size

Categories

(Core :: Layout, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b2

People

(Reporter: RyanVM, Assigned: RyanVM)

Details

(Whiteboard: [build_warning])

Attachments

(1 file, 1 obsolete file)

Noticed this today when building. Not sure when this first appeared, but it must have been within the last few days.
warning C4743: 'const mozilla::layers::ImageLayer::`vftable'' has different size in 'c:\mozbuild\mozilla-central\content\base\src\nsDocument.cpp' and 'c:\mozbuild\mozilla-central\layout\build\nsLayoutModule.cpp': 24 and 20 bytes
warning C4743: 'const mozilla::layers::ColorLayer::`vftable'' has different size in 'c:\mozbuild\mozilla-central\content\base\src\nsDocument.cpp' and 'c:\mozbuild\mozilla-central\layout\build\nsLayoutModule.cpp': 32 and 28 bytes
warning C4743: 'const mozilla::layers::CanvasLayer::`vftable'' has different size in 'c:\mozbuild\mozilla-central\content\base\src\nsDocument.cpp' and 'c:\mozbuild\mozilla-central\layout\build\nsLayoutModule.cpp': 32 and 28 bytes
warning C4743: 'const mozilla::layers::ThebesLayer::`vftable'' has different size in 'c:\mozbuild\mozilla-central\content\base\src\nsDocument.cpp' and 'c:\mozbuild\mozilla-central\layout\build\nsLayoutModule.cpp': 28 and 24 bytes
warning C4743: 'const mozilla::layers::ContainerLayer::`vftable'' has different size in 'c:\mozbuild\mozilla-central\content\base\src\nsDocument.cpp' and 'c:\mozbuild\mozilla-central\layout\build\nsLayoutModule.cpp': 32 and 28 bytes
My guess would be that this is related to NS_LAYER_DECL_NAME -- could either DEBUG or PR_LOGGING be defined differently between some of these files?
Whiteboard: [build_warning]
After some hand holding by dholbert, it appeared that the fix was simply to turn PR_LOGGING on in nsLayoutModule.cpp as it is currently in nsDocument.cpp. However, doing that causes the same warning to appear in a lot of other situations instead for every other file where PR_LOGGING isn't enabled. Per conversation with roc on IRC, it was decided to just enable the extra virtual function unconditionally instead.
Assignee: nobody → ryanvm
Status: NEW → ASSIGNED
Attachment #457209 - Flags: review?(roc)
*sigh* Would have helped if I'd tried compiling that before posting. This one actually builds!
Attachment #457209 - Attachment is obsolete: true
Attachment #457215 - Flags: review+
Keywords: checkin-needed
http://hg.mozilla.org/mozilla-central/rev/a0a4df1ca019
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b2
You need to log in before you can comment on or make changes to this bug.