Bug 577344 - Define extra virtual function unconditionally. r=roc